# SynHydro

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  tests.yml
algorithms/: index.html
algorithms/ALGO_TEMPLATE/: index.html
algorithms/arfima/: index.html
algorithms/gaussian_copula/: index.html
algorithms/grygier_stedinger/: index.html
algorithms/hmm_knn/: index.html
algorithms/kirsch/: index.html
algorithms/knn_bootstrap/: index.html
algorithms/matalas/: index.html
algorithms/multisite_hmm/: index.html
algorithms/multisite_phase_randomization/: index.html
algorithms/nowak_disaggregation/: index.html
algorithms/phase_randomization/: index.html
algorithms/smarta/: index.html
algorithms/sparta/: index.html
algorithms/thomas_fiering/: index.html
algorithms/valencia_schaake/: index.html
algorithms/vine_copula/: index.html
algorithms/warm/: index.html
api/core/: index.html
api/disaggregators/: index.html
api/drought/: index.html
api/generators/: index.html
api/plotting/: index.html
docs/: getting-started.md  index.md
docs/algorithms/: ALGO_TEMPLATE.md  arfima.md  gaussian_copula.md  grygier_stedinger.md  hmm_knn.md  index.md  kirsch.md  knn_bootstrap.md  matalas.md  multisite_hmm.md  multisite_phase_randomization.md  nowak_disaggregation.md  phase_randomization.md  smarta.md  sparta.md  thomas_fiering.md  valencia_schaake.md  vine_copula.md  warm.md
docs/api/: core.md  disaggregators.md  drought.md  generators.md  plotting.md
docs/references/: references.md
docs/tutorials/: 01_quickstart.md  02_multisite.md  03_pipeline.md  04_drought_analysis.md  05_validation.md  06_plotting.md  index.md
examples/: 01_basic_generation.py  02_monthly_to_daily_pipeline.py  03_ensemble_analysis.py  04_drought_analysis_ssi.py  ensemble_demo.py  parameter_system_demo.py
examples/example_data/: retrieve_example_data.py  usgs_daily_streamflow_cms.csv  usgs_monthly_streamflow_cms.csv
getting-started/: index.html
javascripts/: mathjax.js
references/references/: index.html
scripts/: build_tutorial_figures.py
search/: search_index.json
src/sglib/: __init__.py
src/sglib/core/: __init__.py  base.py  ensemble.py  pipeline.py  statistics.py
src/sglib/droughts/: __init__.py  diagnostics.py  distributions.py  ssi.py
src/sglib/methods/: __init__.py
src/sglib/methods/disaggregation/: __init__.py
src/sglib/methods/disaggregation/spatial/: __init__.py
src/sglib/methods/disaggregation/temporal/: __init__.py  nowak.py
src/sglib/methods/generation/: __init__.py
src/sglib/methods/generation/depreciated/: kirsch_nowak.py
src/sglib/methods/generation/machine_learning/: __init__.py
src/sglib/methods/generation/nonparametric/: __init__.py  kirsch.py  phase_randomization.py
src/sglib/methods/nonparametric/: kirsch.py  kirsch_nowak.py
src/sglib/methods/under_development/: ar.py  arima.py  find.py  hmm.py
src/sglib/pipelines/: __init__.py  prebuilt.py
src/sglib/plotting/: __init__.py  _utils.py  config.py  correlation.py  distributions.py  drought.py  monthly_flow_statistics.py  plot.py  timeseries.py  validation.py
src/sglib/transformations/: __init__.py  abstract.py  boxcox.py  deseasonalize.py  log.py  scaler.py  stedinger.py
src/sglib/utils/: __init__.py  data.py  directories.py  load.py  validation.py
src/sglib/verification/: __init__.py
src/synhydro/: __init__.py
src/synhydro/core/: __init__.py  base.py  ensemble.py  nataf.py  pipeline.py  statistics.py  validation.py
src/synhydro/core/validation/: __init__.py  _helpers.py  _metrics.py  _result.py  _testing.py
src/synhydro/droughts/: __init__.py  diagnostics.py  ssi.py
src/synhydro/methods/: __init__.py
src/synhydro/methods/disaggregation/: __init__.py
src/synhydro/methods/generation/: __init__.py
src/synhydro/methods/under_development/: ar.py  arima.py  find.py
src/synhydro/pipelines/: __init__.py  prebuilt.py
src/synhydro/plotting/: __init__.py  _utils.py  config.py  correlation.py  distributions.py  drought.py  timeseries.py  validation.py
src/synhydro/transformations/: __init__.py  abstract.py  boxcox.py  deseasonalize.py  log.py  scaler.py  stedinger.py
src/synhydro/utils/: __init__.py  data.py  directories.py  validation.py
src/synhydro/verification/: __init__.py  drought.py
stylesheets/: extra.css
tests/: __init__.py  conftest.py  test_arfima_generator.py  test_bootstrap_testing.py  test_core_base.py  test_gaussian_copula_generator.py  test_grygier_stedinger_disaggregator.py  test_hmm_knn_generator.py  test_kirsch_generator.py  test_kirsch_nowak_generator.py  test_knn_bootstrap_generator.py  test_matalas_generator.py  test_multisite_hmm_generator.py  test_multisite_phase_randomization_generator.py  test_nataf.py  test_nowak_disaggregator.py  test_phase_randomization_generator.py  test_smarta_generator.py  test_sparta_generator.py  test_ssi_drought_metrics.py  test_thomas_fiering_generator.py  test_transformations.py  test_utils.py  test_valencia_schaake_disaggregator.py  test_validation_metrics.py  test_vine_copula_generator.py  test_warm_generator.py
tests/plotting/: __init__.py  conftest.py  test_correlation.py  test_distributions.py  test_drought.py  test_timeseries.py  test_utils.py  test_validation.py
tutorials/: index.html
tutorials/01_quickstart/: index.html
tutorials/02_multisite/: index.html
tutorials/03_pipeline/: index.html
tutorials/04_drought_analysis/: index.html
tutorials/05_validation/: index.html
tutorials/06_plotting/: index.html
(+27 files in other folders)
