[project]
name = "synhydro"
version = "0.0.2"
description = "Synthetic Generation Library - Methods and models for generating synthetic hydrologic timeseries."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    {name = "Trevor Amestoy", email = "tja73@cornell.edu"},
]
keywords = ["hydrology", "synthetic generation", "streamflow", "stochastic", "time series"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.22",
    "pandas>=1.4",
    "matplotlib>=3.5",
    "scipy>=1.8",
    "scikit-learn>=1.0",
    "hmmlearn>=0.2.7",
    "pywavelets>=1.3",
    "seaborn>=0.12",
    "spei",
    "h5py>=3.6",
]

[project.optional-dependencies]
dev = [
    "ipython",
    "pygeohydro",
    "pytest",
    "pytest-cov",
]
test = [
    "pytest",
    "pytest-cov",
]
lint = [
    "pre-commit>=2.20.0",
]
docs = [
    "mkdocs-material>=9.5,<9.7",
    "mkdocstrings[python]>=0.24",
]

[project.urls]
Homepage = "https://github.com/TrevorJA/SynHydro"
Repository = "https://github.com/TrevorJA/SynHydro"
Documentation = "https://trevorja.github.io/SynHydro/"
Issues = "https://github.com/TrevorJA/SynHydro/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/synhydro"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
